feat(docs): complete docs api
